...
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gallery_image_background_selector" />

    <CheckBox
        android:id="@+id/checkbox"
        style="@style/GalleryGridItemViewCheckBoxStyle"
        android:button="@drawable/gallery_checkbox_selector"
        android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
...
