...
        android:id="@+id/switch_divider"
        android:background="?attr/listItemActionDividerColor"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/car_padding_4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/switch_widget"
        style="@style/CarListVerticalDivider"/>

    <include
        layout="@layout/car_switch_widget"
        android:id="@+id/switch_widget"
        android:layout_width="@dimen/car_primary_icon_size"
...
